--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
