--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Co Vis</title>
   </head>
   <body>
     <div id="root"></div>
